--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '2'
 services: 
   hub:
-    image: selenium/hub
+    image: selenium/hub:2.53.0
     ports:
       - "4444:4444"
   firefox:
-    image: selenium/node-firefox
+    image: selenium/node-firefox:2.53.0
     depends_on:
       - hub
     environment:
